# iw1x-optiklink-builds

./: .clang-format  .clangd  .gitignore  .gitlab-ci.yml  64bit_build_env  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  iw1x.cfg  meson.build  meson_options.txt
.github/workflows/: iw1x-server-k.yml  iw1x-server-r.yml
docs/source/: conf.py  index.rst
docs/source/_static/: copybutton.css
docs/source/pages/development/: building.rst  building_docs.rst  getting.rst  index.rst
docs/source/pages/scripting/: index.rst
docs/source/pages/scripting/functions/: curl.rst  index.rst  utils.rst
docs/source/pages/scripting/methods/: index.rst  player.rst
docs/source/pages/usage/: cvars.rst  index.rst  installation.rst  sv_cmds.rst
meson_for_r/: meson.build  meson_options.txt
misc/scripts/: clang_format.sh  copyright_headers.py  doc_check.sh  file_format.sh  install_hooks
src/: functions.h  functions.hpp  gsc.cpp  gsc.h  gsc.hpp  gsc_entity.cpp  gsc_player.cpp  gsc_utils.cpp  gsc_weapons.cpp  hook.cpp  hook.h  iw1x.cpp  iw1x.h  jump.cpp  pch.h  shared.h  shared.hpp  types.h  types.hpp  version.h
src/gsc/: gsc.cpp  gsc.h  gsc_bots.cpp  gsc_curl.cpp  gsc_entity.cpp  gsc_exec.cpp  gsc_player.cpp  gsc_sqlite.cpp  gsc_utils.cpp  gsc_weapons.cpp
